fix(*): sidebar height on mobile

--- a/base.css
+++ b/base.css
@@ -18,7 +18,7 @@ body {
 .sidebar {
   top: 0;
   position: sticky;
-  height: 100vh;
+  height: 100dvh;
 
   display: flex;
   flex-direction: column;
